--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         top: 50%;  /* 居中 */
         left: 50%; 
         transform: translate(-50%, -50%);  /* 完全居中 */
-        font-size: 40px;
+        font-size: 1vw;
         font-family: Arial, sans-serif;
         color: white;
         text-align: center;
