--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js with HTML Font</title>
+    <title>Paul Architects</title>
     <style>
       body { margin: 0; overflow: hidden; }
       canvas {  display: block; z-index: 5;}
