--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paul Architects</title>
+
+     <!-- 设置 favicon 图标 -->
+    <link rel="icon" href="images/logo.png" type="image/png" sizes="48x48">
+    
     <style>
       body { margin: 0; overflow: hidden; }
       canvas {  display: block; z-index: 5;}
